optimize disk space

--- a/kafka.yml
+++ b/kafka.yml
@@ -33,6 +33,8 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
       KAFKA_DEFAULT_REPLICATION_FACTOR: 3
       KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
+      KAFKA_LOG_RETENTION_HOURS: 12
+      KAFKA_SEGMENT_BYTES: 100000000
     volumes:
       - ./data/kafka1/data:/var/lib/kafka/data
     depends_on:
@@ -53,6 +55,8 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
       KAFKA_DEFAULT_REPLICATION_FACTOR: 3
       KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
+      KAFKA_LOG_RETENTION_HOURS: 12
+      KAFKA_SEGMENT_BYTES: 100000000
     volumes:
       - ./data/kafka2/data:/var/lib/kafka/data
     depends_on:
@@ -73,6 +77,8 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
       KAFKA_DEFAULT_REPLICATION_FACTOR: 3
       KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
+      KAFKA_LOG_RETENTION_HOURS: 12
+      KAFKA_SEGMENT_BYTES: 100000000
     volumes:
       - ./data/kafka3/data:/var/lib/kafka/data
     depends_on:
