--- a/kafka.yml
+++ b/kafka.yml
@@ -1,92 +1,87 @@
 version: '2.1'
 services:
-  zoo1:
-    image: zookeeper:3.4.9
-    hostname: zoo1
+  zookeeper-1:
+    image: confluentinc/cp-zookeeper:7.6.0
+    hostname: zookeeper-1
+    container_name: zookeeper-1
     restart: always
     ports:
       - "2181:2181"
-      - "2888:2888"
-      - "3888:3888"
     environment:
         ZOO_MY_ID: 1
-        ZOO_PORT: 2181
-        #ZOO_SERVERS: server.1=zoo1:2888:3888
         ZOOKEEPER_CLIENT_PORT: 2181
         ZOOKEEPER_TICK_TIME: 2000
     volumes:
       - ./data/zoo1/data:/data
       - ./data/zoo1/datalog:/datalog
 
-  kafka1:
-    image: confluentinc/cp-kafka:5.5.1
-    hostname: kafka1
+  kafka-1:
+    image: confluentinc/cp-kafka:7.6.0
+    hostname: kafka-1
+    container_name: kafka-1
     restart: always
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka1:19092,LISTENER_DOCKER_EXTERNAL://172.19.100.56:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181"
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-1:9092
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper-1:2181"
       KAFKA_BROKER_ID: 1
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
       KAFKA_DEFAULT_REPLICATION_FACTOR: 3
-      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
       KAFKA_LOG_RETENTION_HOURS: 72
       KAFKA_SEGMENT_BYTES: 100000000
     volumes:
       - ./data/kafka1/data:/var/lib/kafka/data
     depends_on:
-      - zoo1
+      - zookeeper-1
 
-  kafka2:
-    image: confluentinc/cp-kafka:5.5.1
-    hostname: kafka2
+  kafka-2:
+    image: confluentinc/cp-kafka:7.6.0
+    hostname: kafka-2
+    container_name: kafka-2
     restart: always
     ports:
       - "9093:9093"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka2:19092,LISTENER_DOCKER_EXTERNAL://172.19.100.56:9093
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181"
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-2:9093
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper-1:2181"
       KAFKA_BROKER_ID: 2
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
       KAFKA_DEFAULT_REPLICATION_FACTOR: 3
-      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
       KAFKA_LOG_RETENTION_HOURS: 72
       KAFKA_SEGMENT_BYTES: 100000000
     volumes:
       - ./data/kafka2/data:/var/lib/kafka/data
     depends_on:
-      - zoo1
+      - zookeeper-1
 
-  kafka3:
-    image: confluentinc/cp-kafka:5.5.1
-    hostname: kafka3
+  kafka-3:
+    image: confluentinc/cp-kafka:7.6.0
+    hostname: kafka-3
+    container_name: kafka-3
     restart: always
     ports:
       - "9094:9094"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka3:19092,LISTENER_DOCKER_EXTERNAL://172.19.100.56:9094
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181"
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-3:9094
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper-1:2181"
       KAFKA_BROKER_ID: 3
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
       KAFKA_DEFAULT_REPLICATION_FACTOR: 3
-      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
       KAFKA_LOG_RETENTION_HOURS: 72
       KAFKA_SEGMENT_BYTES: 100000000
     volumes:
       - ./data/kafka3/data:/var/lib/kafka/data
     depends_on:
-      - zoo1
+      - zookeeper-1
   kafdrop:
-    image: obsidiandynamics/kafdrop:3.30.0
+    image: obsidiandynamics/kafdrop:latest
     ports:
       - 19000:9000
+    depends_on:
+      - kafka-1
+      - kafka-2
+      - kafka-3
     environment:
-      KAFKA_BROKERCONNECT: kafka1:9092,kafka2:9093,kafka3:9094
+      KAFKA_BROKERCONNECT: kafka-1:9092,kafka-2:9093,kafka-3:9094
       TZ: "Asia/Bangkok"
