--- a/kafka.yml
+++ b/kafka.yml
@@ -1,11 +1,7 @@
-version: '2.1'
 services:
   zookeeper-1:
     image: confluentinc/cp-zookeeper:7.6.0
     user: "0:0"
-    hostname: zookeeper-1
-    container_name: zookeeper-1
-    restart: always
     ports:
       - "2181:2181"
     environment:
@@ -13,19 +9,28 @@ services:
         ZOOKEEPER_CLIENT_PORT: 2181
         ZOOKEEPER_TICK_TIME: 2000
     volumes:
-      - ./data/zookeeper-1/data:/var/lib/zookeeper/data
-      - ./data/zookeeper-1/log:/var/lib/zookeeper/log
+      - zookeeper-data:/var/lib/zookeeper/data
+      - zookeeper-log:/var/lib/zookeeper/log
+    networks:
+      - derive-network
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: any
+        delay: 5s
+        max_attempts: 20
+        window: 120s
+      placement:
+        constraints:
+          - node.hostname == worker-1
 
   kafka-1:
     image: confluentinc/cp-kafka:7.6.0
     user: "0:0"
-    hostname: kafka-1
-    container_name: kafka-1
-    restart: always
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka-1:19092,LISTENER_DOCKER_EXTERNAL://172.19.100.76:9092
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka-1:19092,LISTENER_DOCKER_EXTERNAL://10.211.55.16:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
       KAFKA_ZOOKEEPER_CONNECT: "zookeeper-1:2181"
@@ -35,20 +40,29 @@ services:
       KAFKA_LOG_RETENTION_HOURS: 72
       KAFKA_SEGMENT_BYTES: 100000000
     volumes:
-      - ./data/kafka-1/data:/var/lib/kafka/data
+      - kafka-1-data:/var/lib/kafka/data
     depends_on:
       - zookeeper-1
+    networks:
+      - derive-network
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: any
+        delay: 5s
+        max_attempts: 3
+        window: 120s
+      placement:
+        constraints:
+          - node.hostname == worker-1
 
   kafka-2:
     image: confluentinc/cp-kafka:7.6.0
     user: "0:0"
-    hostname: kafka-2
-    container_name: kafka-2
-    restart: always
     ports:
       - "9093:9093"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka-2:19093,LISTENER_DOCKER_EXTERNAL://172.19.100.76:9093
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka-2:19093,LISTENER_DOCKER_EXTERNAL://10.211.55.16:9093
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
       KAFKA_ZOOKEEPER_CONNECT: "zookeeper-1:2181"
@@ -58,20 +72,30 @@ services:
       KAFKA_LOG_RETENTION_HOURS: 72
       KAFKA_SEGMENT_BYTES: 100000000
     volumes:
-      - ./data/kafka-2/data:/var/lib/kafka/data
+      - kafka-2-data:/var/lib/kafka/data
     depends_on:
       - zookeeper-1
+    networks:
+      - derive-network
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: any
+        delay: 5s
+        max_attempts: 3
+        window: 120s
+      placement:
+        constraints:
+          - node.hostname == worker-1
 
   kafka-3:
     image: confluentinc/cp-kafka:7.6.0
     user: "0:0"
-    hostname: kafka-3
-    container_name: kafka-3
     restart: always
     ports:
       - "9094:9094"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka-3:19094,LISTENER_DOCKER_EXTERNAL://172.19.100.76:9094
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka-3:19094,LISTENER_DOCKER_EXTERNAL://10.211.55.15:9094
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
       KAFKA_ZOOKEEPER_CONNECT: "zookeeper-1:2181"
@@ -81,9 +105,22 @@ services:
       KAFKA_LOG_RETENTION_HOURS: 72
       KAFKA_SEGMENT_BYTES: 100000000
     volumes:
-      - ./data/kafka-3/data:/var/lib/kafka/data
+      - kafka-3-data:/var/lib/kafka/data
     depends_on:
       - zookeeper-1
+    networks:
+      - derive-network
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: any
+        delay: 5s
+        max_attempts: 3
+        window: 120s
+      placement:
+        constraints:
+          - node.hostname == worker-2
+
   kafdrop:
     image: obsidiandynamics/kafdrop:latest
     ports:
@@ -95,3 +132,28 @@ services:
     environment:
       KAFKA_BROKERCONNECT: kafka-1:9092,kafka-2:9093,kafka-3:9094
       TZ: "Asia/Bangkok"
+    networks:
+      - derive-network
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: any
+        delay: 5s
+        max_attempts: 3
+        window: 120s
+
+volumes:
+  zookeeper-data:
+    driver: local
+  zookeeper-log:
+    driver: local
+  kafka-1-data:
+    driver: local
+  kafka-2-data:
+    driver: local
+  kafka-3-data:
+    driver: local
+
+networks:
+  derive-network:
+    driver: overlay
