--- a/kafka.yml
+++ b/kafka.yml
@@ -141,6 +141,9 @@ services:
         delay: 5s
         max_attempts: 3
         window: 120s
+      placement:
+        constraints:
+          - node.role == worker
 
 volumes:
   zookeeper-data:
