--- a/kafka.yml
+++ b/kafka.yml
@@ -30,10 +30,10 @@ services:
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka-1:19092,LISTENER_DOCKER_EXTERNAL://10.211.55.16:9092
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka_kafka-1:19092,LISTENER_DOCKER_EXTERNAL://10.211.55.16:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: "zookeeper-1:2181"
+      KAFKA_ZOOKEEPER_CONNECT: "kafka_zookeeper-1:2181"
       KAFKA_BROKER_ID: 1
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
       KAFKA_DEFAULT_REPLICATION_FACTOR: 3
@@ -62,10 +62,10 @@ services:
     ports:
       - "9093:9093"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka-2:19093,LISTENER_DOCKER_EXTERNAL://10.211.55.16:9093
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka_kafka-2:19093,LISTENER_DOCKER_EXTERNAL://10.211.55.16:9093
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: "zookeeper-1:2181"
+      KAFKA_ZOOKEEPER_CONNECT: "kafka_zookeeper-1:2181"
       KAFKA_BROKER_ID: 2
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
       KAFKA_DEFAULT_REPLICATION_FACTOR: 3
@@ -95,10 +95,10 @@ services:
     ports:
       - "9094:9094"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka-3:19094,LISTENER_DOCKER_EXTERNAL://10.211.55.15:9094
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka_kafka-3:19094,LISTENER_DOCKER_EXTERNAL://10.211.55.15:9094
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: "zookeeper-1:2181"
+      KAFKA_ZOOKEEPER_CONNECT: "kafka_zookeeper-1:2181"
       KAFKA_BROKER_ID: 3
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
       KAFKA_DEFAULT_REPLICATION_FACTOR: 3
@@ -130,7 +130,7 @@ services:
       - kafka-2
       - kafka-3
     environment:
-      KAFKA_BROKERCONNECT: kafka-1:9092,kafka-2:9093,kafka-3:9094
+      KAFKA_BROKERCONNECT: kafka_kafka-1:9092,kafka_kafka-2:9093,kafka_kafka-3:9094
       TZ: "Asia/Bangkok"
     networks:
       - derive-network
@@ -143,7 +143,7 @@ services:
         window: 120s
       placement:
         constraints:
-          - node.role == worker
+          - node.role == manager
 
 volumes:
   zookeeper-data:
