--- a/kafka.yml
+++ b/kafka.yml
@@ -31,8 +31,8 @@ services:
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka_kafka-1:19092,LISTENER_DOCKER_EXTERNAL_1://10.211.55.15:9092,LISTENER_DOCKER_EXTERNAL_2://10.211.55.16:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL_1:PLAINTEXT,LISTENER_DOCKER_EXTERNAL_2:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka_kafka-1:19092,LISTENER_DOCKER_EXTERNAL://0.0.0.0:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
       KAFKA_ZOOKEEPER_CONNECT: "kafka_zookeeper-1:2181"
       KAFKA_BROKER_ID: 1
@@ -64,8 +64,8 @@ services:
     ports:
       - "9093:9093"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka_kafka-2:19093,LISTENER_DOCKER_EXTERNAL_1://10.211.55.15:9093,LISTENER_DOCKER_EXTERNAL_2://10.211.55.16:9093
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL_1:PLAINTEXT,LISTENER_DOCKER_EXTERNAL_2:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka_kafka-2:19093,LISTENER_DOCKER_EXTERNAL://0.0.0.0:9093
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
       KAFKA_ZOOKEEPER_CONNECT: "kafka_zookeeper-1:2181"
       KAFKA_BROKER_ID: 2
@@ -98,8 +98,8 @@ services:
     ports:
       - "9094:9094"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka_kafka-3:19094,LISTENER_DOCKER_EXTERNAL_1://10.211.55.15:9094,LISTENER_DOCKER_EXTERNAL_2://10.211.55.16:9094
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL_1:PLAINTEXT,LISTENER_DOCKER_EXTERNAL_2:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka_kafka-3:19094,LISTENER_DOCKER_EXTERNAL://0.0.0.0:9094
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
       KAFKA_ZOOKEEPER_CONNECT: "kafka_zookeeper-1:2181"
       KAFKA_BROKER_ID: 3
