--- a/kafka.yml
+++ b/kafka.yml
@@ -13,8 +13,10 @@ services:
         ZOOKEEPER_CLIENT_PORT: 2181
         ZOOKEEPER_TICK_TIME: 2000
     volumes:
-      - ./data/zookeeper-1/data:/var/lib/zookeeper/data
-      - ./data/zookeeper-1/log:/var/lib/zookeeper/log
+      - zookeeper-data:/var/lib/zookeeper/data
+      - zookeeper-log:/var/lib/zookeeper/log
+    networks:
+      - kafka-network
 
   kafka-1:
     image: confluentinc/cp-kafka:7.6.1
@@ -35,9 +37,11 @@ services:
       KAFKA_LOG_RETENTION_HOURS: 72
       KAFKA_SEGMENT_BYTES: 100000000
     volumes:
-      - ./data/kafka-1/data:/var/lib/kafka/data
+      - kafka-1-data:/var/lib/kafka/data
     depends_on:
       - zookeeper-1
+    networks:
+      - kafka-network
 
   kafka-2:
     image: confluentinc/cp-kafka:7.6.1
@@ -58,9 +62,11 @@ services:
       KAFKA_LOG_RETENTION_HOURS: 72
       KAFKA_SEGMENT_BYTES: 100000000
     volumes:
-      - ./data/kafka-2/data:/var/lib/kafka/data
+      - kafka-2-data:/var/lib/kafka/data
     depends_on:
       - zookeeper-1
+    networks:
+      - kafka-network
 
   kafka-3:
     image: confluentinc/cp-kafka:7.6.1
@@ -81,9 +87,11 @@ services:
       KAFKA_LOG_RETENTION_HOURS: 72
       KAFKA_SEGMENT_BYTES: 100000000
     volumes:
-      - ./data/kafka-3/data:/var/lib/kafka/data
+      - kafka-3-data:/var/lib/kafka/data
     depends_on:
       - zookeeper-1
+    networks:
+      - kafka-network
       
   kafdrop:
     image: obsidiandynamics/kafdrop:latest
@@ -96,3 +104,16 @@ services:
     environment:
       KAFKA_BROKERCONNECT: kafka-1:9092,kafka-2:9093,kafka-3:9094
       TZ: "Asia/Bangkok"
+    networks:
+      - kafka-network
+
+volumes:
+  zookeeper-data:
+  zookeeper-log:
+  kafka-1-data:
+  kafka-2-data:
+  kafka-3-data:
+
+networks:
+  kafka-network:
+    driver: bridge
